--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "root",
-    "password": "Hawkeye321",
+    "username": "slan6wgdg324h6tu",
+    "password": "xyrwgc6x4j1qpa0r",
     "database": "burgers_db",
-    "host": "127.0.0.1",
+    "host": " y0nkiij6humroewt.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   },
   "test": {
