--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "slan6wgdg324h6tu",
-    "password": "xyrwgc6x4j1qpa0r",
+    "username": "root",
+    "password": "Hawkeye321",
     "database": "burgers_db",
-    "host": " y0nkiij6humroewt.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
@@ -14,10 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "vj41x5fgxcjxu461",
-    "password": "myc42jgdk70tci58",
-    "database": "uqwk4782anunodli",
-    "host": "s554ongw9quh1xjs.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "username": "slan6wgdg324h6tu",
+    "password": "xyrwgc6x4j1qpa0r",
+    "database": "t793mhdzxu58iv3t",
+    "host": "y0nkiij6humroewt.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
